-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
QE 2022-07-25, QE 2022-08-08
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized pointer field
The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
/src/mongo/db/exec/sbe/stages/hash_lookup.h:184: UNINIT_CTOR 122386 Class member declaration for "_collator".
/src/mongo/db/exec/sbe/stages/hash_lookup.cpp:61: UNINIT_CTOR 122386 Non-static class member "_collator" is not initialized in this constructor nor in any functions that it calls.