SERVER-67546 initialize _collator to nullptr